// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`husky hg should not matter where the user defined hooks are 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=python:.hg/hooks/changegroup.py:execute_hook
incoming=python:.hg/hooks/incoming.py:execute_hook
outgoing=python:.hg/hooks/outgoing.py:execute_hook
pre-push=python:.hg/hooks/pre-push.py:execute_hook
prechangegroup=python:.hg/hooks/prechangegroup.py:execute_hook
prelistkeys=python:.hg/hooks/prelistkeys.py:execute_hook
preoutgoing=python:.hg/hooks/preoutgoing.py:execute_hook
pretag=python:.hg/hooks/pretag.py:execute_hook
pretxnopen=python:.hg/hooks/pretxnopen.py:execute_hook
pretxnclose=python:.hg/hooks/pretxnclose.py:execute_hook
txnabort=python:.hg/hooks/txnabort.py:execute_hook
pretxnchangegroup=python:.hg/hooks/pretxnchangegroup.py:execute_hook
pretxncommit=python:.hg/hooks/pretxncommit.py:execute_hook
preupdate=python:.hg/hooks/preupdate.py:execute_hook
pushkey=python:.hg/hooks/pushkey.py:execute_hook
#husky-hg:end
[extensions]"
`;

exports[`husky hg should not modify user hooks 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=python:.hg/hooks/changegroup.py:execute_hook
incoming=python:.hg/hooks/incoming.py:execute_hook
outgoing=python:.hg/hooks/outgoing.py:execute_hook
pre-push=python:.hg/hooks/pre-push.py:execute_hook
prechangegroup=python:.hg/hooks/prechangegroup.py:execute_hook
prelistkeys=python:.hg/hooks/prelistkeys.py:execute_hook
preoutgoing=python:.hg/hooks/preoutgoing.py:execute_hook
pretag=python:.hg/hooks/pretag.py:execute_hook
pretxnopen=python:.hg/hooks/pretxnopen.py:execute_hook
pretxnclose=python:.hg/hooks/pretxnclose.py:execute_hook
txnabort=python:.hg/hooks/txnabort.py:execute_hook
pretxnchangegroup=python:.hg/hooks/pretxnchangegroup.py:execute_hook
pretxncommit=python:.hg/hooks/pretxncommit.py:execute_hook
preupdate=python:.hg/hooks/preupdate.py:execute_hook
pushkey=python:.hg/hooks/pushkey.py:execute_hook
#husky-hg:end"
`;

exports[`husky hg should remove the husky section on uninstall 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
"
`;
